--- a/sketchRNN.ipynb
+++ b/sketchRNN.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#数据预处理\n",
+    "#kxin--数据预处理\n",
     "class StrokesDataset(Dataset):\n",
     "\n",
     "\n",
@@ -45,7 +45,7 @@
     "        self.scale = scale\n",
     "\n",
     "\n",
-    "        #保存序列最大长度统一数据维度数\n",
+    "        #kxin--保存序列最大长度统一数据维度数\n",
     "        longest_seq_len = max([len(seq) for seq in data])\n",
     "\n",
     "        #初始化data和mask\n",
@@ -54,7 +54,7 @@
     "        self.mask = torch.zeros(len(data), longest_seq_len + 1)\n",
     "\n",
     "\n",
-    "        #处理数据\n",
+    "        #kxin--处理数据\n",
     "        for i, seq in enumerate(data):\n",
     "            seq = torch.from_numpy(seq)\n",
     "            len_seq = len(seq)\n",
@@ -86,13 +86,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#描述混合高斯的工具类，返回多个二元高斯分布和分类分布\n",
+    "#kxin--描述混合高斯的工具类，返回多个二元高斯分布和分类分布\n",
     "class BivariateGaussianMixture(object):\n",
     "    def __init__(self, pi_logits: torch.Tensor, mu_x: torch.Tensor, mu_y: torch.Tensor,\n",
     "                 sigma_x: torch.Tensor, sigma_y: torch.Tensor, rho_xy: torch.Tensor):\n",
     "        self.pi_logits = pi_logits\n",
     "        self.mu_x = mu_x\n",
     "        self.mu_y = mu_y\n",
+    "        self.kxin = 'kxin'\n",
     "        self.sigma_x = sigma_x\n",
     "        self.sigma_y = sigma_y\n",
     "        self.rho_xy = rho_xy\n",
@@ -107,7 +108,7 @@
     "        self.sigma_x *= math.sqrt(temperature)\n",
     "        self.sigma_y *= math.sqrt(temperature)\n",
     "\n",
-    "    #利用传入的参数，返回多个二元高斯分布和分类分布\n",
+    "    #kxin--利用传入的参数，返回多个二元高斯分布和分类分布\n",
     "    def get_distribution(self):\n",
     "        sigma_x = torch.clamp_min(self.sigma_x, 1e-5)\n",
     "        sigma_y = torch.clamp_min(self.sigma_y, 1e-5)\n",
@@ -163,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#解码器\n",
+    "#kxin--解码器\n",
     "class DecoderRNN(nn.Module):\n",
     "    def __init__(self, d_z: int, dec_hidden_size: int, n_distributions: int):\n",
     "        super().__init__()\n",
@@ -184,7 +185,7 @@
     "\n",
     "        outputs, state = self.lstm(x, state)\n",
     "\n",
-    "        #通过线性层和softmax，生成q1,q2,q3\n",
+    "        #kxin--通过线性层和softmax，生成q1,q2,q3\n",
     "        q_logits = self.q_log_softmax(self.q_head(outputs))\n",
     "\n",
     "        #通过线性层生成混合高斯对应参数，\n",
@@ -216,7 +217,7 @@
     "        probs = torch.sum(pi.probs * torch.exp(mix.log_prob(xy)), 2)\n",
     "        loss_stroke = -torch.mean(mask * torch.log(1e-5 + probs))\n",
     "\n",
-    "        #计算lossp\n",
+    "        #kxin--计算lossp\n",
     "        loss_pen = -torch.mean(target[:, :, 2:] * q_logits)\n",
     "\n",
     "        return loss_stroke + loss_pen"
@@ -260,7 +261,7 @@
     "        state = None\n",
     "        \n",
     "        #==========解码\n",
-    "        # 验证画图时不需要梯度跟新\n",
+    "        #kxin-- 验证画图时不需要梯度跟新\n",
     "        with torch.no_grad():\n",
     "            for i in range(longest_seq_len):\n",
     "                data = torch.cat([s.view(1, 1, -1), z.unsqueeze(0)], 2)\n",
@@ -292,7 +293,7 @@
     "        stroke[q_idx + 2] = 1\n",
     "        return stroke\n",
     "\n",
-    "    #工具方法，画图\n",
+    "    #kxin--工具方法，画图\n",
     "    def plot(self,seq: torch.Tensor,dataName, epoch, batch_index, loss):\n",
     "        seq[:, 0:2] = torch.cumsum(seq[:, 0:2], dim=0)\n",
     "        seq[:, 2] = seq[:, 3]\n",
@@ -302,7 +303,7 @@
     "        plt.figure(figsize=(2,2))\n",
     "        for s in strokes:\n",
     "            plt.plot(s[:, 0], -s[:, 1])\n",
-    "        plt.title(f'=={dataName }==, Epoch {epoch}, Batch {batch_index}, Loss {loss:.5f}',fontsize=10) \n",
+    "        plt.title(f'==kxin_{dataName }==, Epoch {epoch}, Batch {batch_index}, Loss {loss:.5f}',fontsize=10) \n",
     "        plt.axis('off')\n",
     "        plt.show()"
    ]
@@ -317,7 +318,7 @@
     "#训练器\n",
     "class Trainer(object):\n",
     "    device: torch.device = (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    \n",
+    "    kxin = './kxin/'\n",
     "    #注意修改数据路径\n",
     "    path = './data/'\n",
     "\n",
@@ -347,7 +348,7 @@
     "        self.encoder = EncoderRNN(self.d_z, self.enc_hidden_size).to(self.device)\n",
     "        self.decoder = DecoderRNN(self.d_z, self.dec_hidden_size, self.n_distributions).to(self.device)\n",
     "\n",
-    "        # =======设置优化器,将模型参数传入\n",
+    "        #kxin-- =======设置优化器,将模型参数传入\n",
     "        parameters = list(self.encoder.parameters()) + list(self.decoder.parameters())\n",
     "        self.optimizer = optim.Adam(parameters, lr = self.lr)\n",
     "\n",
@@ -363,7 +364,7 @@
     "        # 加载数据集\n",
     "        dataset = np.load(str(self.path), encoding='latin1', allow_pickle=True)\n",
     "\n",
-    "        #创建数据集\n",
+    "        #kxin--创建数据集\n",
     "        self.train_dataset = StrokesDataset(dataset['train'], self.max_seq_length)\n",
     "        self.valid_dataset = StrokesDataset(dataset['valid'], self.max_seq_length, self.train_dataset.scale)\n",
     "        #训练集需要打乱\n",
@@ -396,7 +397,7 @@
     "        kl_loss = self.kl_div_loss(sigma_hat, mu)\n",
     "        #Rloss\n",
     "        reconstruction_loss = self.reconstruction_loss(mask, data[1:], dist, q_logits)\n",
-    "        #相加\n",
+    "        #kxin--相加\n",
     "        loss = reconstruction_loss + self.kl_div_loss_weight * kl_loss\n",
     "\n",
     "\n",
@@ -416,7 +417,7 @@
     "        #从验证集随机取样一个样例画图\n",
     "        data, *_ = self.valid_dataset[np.random.choice(len(self.valid_dataset))]\n",
     "        data = data.unsqueeze(1).to(self.device)\n",
-    "        #调用样例工具类对应方法传入数据，画图。\n",
+    "        #kxin--调用样例工具类对应方法传入数据，画图。\n",
     "        self.sampler.sample(data, self.temperature,self.dataName, epoch, batch_index, loss)\n",
     "\n",
     "    #运行模型\n",
